syntax = "proto2";

message Sub1 {
  optional int32 sub_a = 1;
}

message Base {
    required int32 base_a = 1; 
    optional int32 base_b = 2;
    optional bytes base_c = 3;
  }